# Mlucas

./: .gitignore  AUTHORS  CHANGELOG.md  COPYING  ChangeLog  Makefile.am  Makefile.in  Mdata.h  Mlucas.c  Mlucas.h  NEWS  README  README.md  align.h  bootstrap  br.c  carry.h  carry_dbg.h  carry_gcc32.h  carry_gcc64.h  config-fermat.sh  config.h.in  configure  configure.ac  dft_macro.c  dft_macro.h  f2psp.h  fac_test_dat128.h  fac_test_dat256.h  fac_test_dat96.h  factor.c  factor.h  factor_test.h  fermat_mod_square.c  float_intrin.h  gcd_lehmer.c  gcd_lehmer.h  genFFT_mul.h  getRealTime.c  get_cpuid.c  (+185 more)
.github/workflows/: ci.yml  riscv.yml
am/: amd64_instruction_unspecified.tpl  generic.tpl  main.am  main.def  main.tpl  scheme.tpl
doc/: mlucas.1
docs/: ANDROID.md  ARCHITECTURE.md  ConvertInlineAsm.txt  Fermat-testing.md  HOW_IT_WORKS.md  Mfactor_buildnotes.txt  PERFORMANCE.md  a.txt  alderlake.txt  b.txt  brent-suyama.txt  c.txt  d.txt  dct.txt  fgt.txt  gerbicz.txt  gpuowl_stats.txt  hwloc_test.txt  irrational.txt  knc.txt  nt.txt  pm1.txt  pm1_compare.txt  pm1_d210.txt  pm1_d330.txt  pm1_d420.txt  pm1_d660.txt  pm1_d840.txt  predefs_archlinux.txt  predefs_linux.txt  predefs_mac.txt  predefs_power9.txt  prp_proof.txt  prp_proof_examples.txt  qs.txt  todo.txt
html/: README.html
patch/: 0001-missing-add-autoreconf-autogen-and-perl-as-supported.patch
scripts/: gen-ChangeLog-NEWS  manpage.pl  mlucas.in  self_test.test  spot_check.test
src/: ._Mdata.h  ._Mlucas.h  ._align.h  ._carry.h  ._carry_gcc32.h  ._carry_gcc64.h  ._dft_macro.h  ._fac_test_dat128.h  ._fac_test_dat192.h  ._fac_test_dat256.h  ._fac_test_dat64.h  ._fac_test_dat96.h  ._factor.c  ._factor.h  ._factor_test.h  ._fermat_mod_square.c  ._fgt_m61.c  ._fgt_m61.h  ._gcd_lehmer.c  ._gcd_lehmer.h  ._genFFT_mul.h  ._getRealTime.c  ._get_cpuid.c  ._get_fft_radices.c  ._get_fp_rnd_const.c  ._get_preferred_fft_radix.c  ._imul256_macro.h  ._imul_macro.c  ._imul_macro0.h  ._masterdefs.h  ._mers_mod_square.c  ._mi64.c  ._mi64.h  ._pairFFT_mul.c  ._pair_square.h  ._platform.h  ._primenet.py  ._qfloat.c  ._qfloat.h  ._radix09_sse_macro.h  (+373 more)
src/images/icons/: ._README.html  README.html
